<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_incident_list"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_incidents_list" />

    <item
        android:id="@+id/navigation_live_incident"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_live_incident_view" />

    <item
        android:id="@+id/navigation_my_ics_214s"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my_forms_tab" />

    <item
        android:id="@+id/navigation_personal_section_view_pager_container"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_personal_section_container" />
</menu>